<resources>
    <string name="app_name">MovieDatabase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="now">Now</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="search">Search</string>
    <string name="logout">LOGOUT</string>
    <string name="save_changes">Save changes</string>
</resources>
